--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -14,8 +14,7 @@
     <body>
         <div>
             {{> headerHome }}
-
-            <div class="container" id="bodyHome">
+            <div class="container">
                 {{{body}}}
             </div>
             
