--- a/src/resources/views/layouts/customer.hbs
+++ b/src/resources/views/layouts/customer.hbs
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/heightResponsive.css">
         <link rel="stylesheet" href="/css/widthResponsive.css">
+        <link rel="stylesheet" href="/css/main.css">
         <link rel="shortcut icon" href="/img/logo.png">
     </head>
     <body>
@@ -19,7 +20,7 @@
                 {{{body}}}
             </div>
             
-            {{> footer}}
+            {{!-- {{> footer}} --}}
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
