--- a/src/resources/views/partials/headerHome.hbs
+++ b/src/resources/views/partials/headerHome.hbs
@@ -1,4 +1,10 @@
-<nav class="navbar-expand-md navbar-dark bg-dark fixed-top">
+<nav class="navbar-expand-md navbar-dark bg-dark">
+{{#if message}}
+    <div style="text-align: center" class="alert alert-{{message.type}}">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>{{message.intro}}</strong> {{message.message}}
+    </div>
+{{/if}}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
