--- a/src/resources/views/addProduct.hbs
+++ b/src/resources/views/addProduct.hbs
@@ -19,7 +19,7 @@
             </div>
             <div class="w-xl-50 w-lg-50 w-md-50 w-sm-100 w-xs-100">
                 <input type="text" class="form-control" id="quantity" name="quantity" placeholder="Số lượng sản phẩm">
-                <p class="warning" id="warningName"></p>
+                <p class="warning" id="warningQuantity"></p>
             </div>
         </div>
         
@@ -35,94 +35,58 @@
     </div>
 </form>
 <script>
-    checkNameUser = true;
-    //check form register
     function check(){
         var checked=true;
-        //check user
-        var user_reg=/^[A-Za-z][A-Za-z0-9]{5,15}$/;
-        var userCheck = document.getElementById('user').value;
-        if(userCheck == "") {
-                document.getElementById("warningUser").innerHTML="Vui lòng nhập vào tên đăng nhập!";
+        //check name product
+        
+        var nameCheck = document.getElementById('name').value;
+        if(nameCheck == "") {
+                document.getElementById("warningName").innerHTML="Vui lòng nhập vào tên sản phẩm!";
                 checked = false;
             }
-        else    if(user_reg.test(userCheck))  document.getElementById("warningUser").innerHTML="";
-                else  {
-                    document.getElementById("warningUser").innerHTML="Tên đăng nhập từ 6 - 15 kí tự và bắt đầu bằng chữ cái!";
-                    checked = false;
-                }
+        else    document.getElementById("warningName").innerHTML="";
 
-        //check password
-        var pass_reg=/^(?=.*[A-Za-z])(?=.*[0-9])[A-Za-z0-9]{6,15}$/;
-        var passCheck = document.getElementById('password').value;
-        if(passCheck == "") {
-            document.getElementById("warningPassword").innerHTML="Vui lòng nhập vào mật khẩu!";
+        //check cost
+        var cost_reg=/^[1-9][0-9]{3,15}$/;
+        var costCheck = document.getElementById('cost').value;
+        if(costCheck == "") {
+            document.getElementById("warningCost").innerHTML="Vui lòng nhập vào giá sản phẩm!";
             checked=false;
         }
-        else  if(pass_reg.test(passCheck))  document.getElementById("warningPassword").innerHTML="";
+        else  if(cost_reg.test(costCheck))  document.getElementById("warningCost").innerHTML="";
                 else  {
-                    document.getElementById("warningPassword").innerHTML="Mật khẩu từ 6 - 15 kí tự bao gồm chữ và số!";
+                    document.getElementById("warningCost").innerHTML="Giá sản phẩm không đúng định dạng!";
                     checked = false;
                 }    
-        //
-        var rePassCheck = document.getElementById('rePassword').value;
-        if(rePassCheck == "") {
-            document.getElementById("warningRePassWord").innerHTML="Vui lòng lại mật khẩu!";
-            checked = false;
+        //check quantity
+        var quantity_reg=/^[1-9][0-9]{0,15}$/;
+        var quantityCheck = document.getElementById('quantity').value;
+        if(quantityCheck == "") {
+            document.getElementById("warningQuantity").innerHTML="Vui lòng nhập vào số lượng sản phẩm!";
+            checked=false;
         }
-        else  if(rePassCheck == passCheck) document.getElementById("warningRePassWord").innerHTML="";
-                else {
-                        document.getElementById("warningRePassWord").innerHTML="Mật khẩu sai vui lòng nhập lại!";
-                        checked = false;
-                    }
-        if(checkNameUser == false)
-        {
-            checked = false;
-            document.getElementById("warningUser").innerHTML="Tên tài khoản đã tồn tại vui lòng chọn tên khác!";
-        }
+        else  if(quantity_reg.test(quantityCheck))  document.getElementById("warningQuantity").innerHTML="";
+                else  {
+                    document.getElementById("warningQuantity").innerHTML="Số lượng sản phẩm không đúng định dạng!";
+                    checked = false;
+                }    
+
+        //check image
+        var imageCheck = document.getElementById('image').value;
+        if(imageCheck == "") {
+                document.getElementById("warningImage").innerHTML="Vui lòng chọn ảnh sản phẩm!";
+                checked = false;
+            }
+        else    document.getElementById("warningImage").innerHTML="";
+
+        //check description
+        var descriptionCheck = document.getElementById('description').value;
+        if(descriptionCheck == "") {
+                document.getElementById("warningDescription").innerHTML="Vui lòng nhập vào mô tả sản phẩm!";
+                checked = false;
+            }
+        else    document.getElementById("warningDescription").innerHTML="";
         return checked;
     }
-    element.addEventListener("blur",checkUser);
-    //check user
-    function checkUser(user)
-        {
-        var xmlhttp;
-        xmlhttp=new XMLHttpRequest();
-        xmlhttp.onreadystatechange=function() {
-        if (xmlhttp.readyState==4 && xmlhttp.status==200) {
-            if(xmlhttp.responseText != "")
-            {
-                document.getElementById("warningUser").innerHTML=xmlhttp.responseText;
-                checkNameUser = false;
-            }
-            else {
-                checkNameUser = true;
-                if(document.getElementById("warningUser").innerHTML == "Tên tài khoản đã tồn tại vui lòng chọn tên khác!")
-                    document.getElementById("warningUser").innerHTML=xmlhttp.responseText;
-                }
-            }
-        }
-        xmlhttp.open("GET","/checkUserDatabase?user="+user,true);
-        xmlhttp.send();
-        }
-
-    //check login
-    function checkLogin(){
-        var checkLogin = true;
-        //check user
-        var userCheckLogin = document.getElementById('userLogin').value;
-        if(userCheckLogin == "") {
-                document.getElementById("WarningUserLogin").innerHTML="Vui lòng nhập vào tên đăng nhập!";
-                checkLogin = false;
-            }
-        else    document.getElementById("WarningUserLogin").innerHTML="";
-        //check password
-        var passCheck = document.getElementById('passwordLogin').value;
-        if(passCheck == "") {
-                document.getElementById("WarningPasswordLogin").innerHTML="Vui lòng nhập vào mật khẩu!";
-                checkLogin = false;
-            }
-        else    document.getElementById("WarningPasswordLogin").innerHTML="";
-        return checkLogin;
-    }
+   
 </script>
