--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -112,10 +112,14 @@
         {{/each}}
     </div>
 </div>
-<script>
 
+
+<script>
     window.onload = function()
     {
+        {{#if message.type}}
+            $('#login').modal('show');
+        {{/if}}
         changeNumber();
     };
     
