--- a/src/resources/views/partials/headerCustomer.hbs
+++ b/src/resources/views/partials/headerCustomer.hbs
@@ -43,7 +43,7 @@
             <div class="d-flex rightItem navbar-nav">
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user-circle"></i> Phong
+                    <i class="fas fa-user-circle"></i> {{cus.user}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Đổi mật khẩu</a>
