--- a/src/resources/views/partials/headerHome.hbs
+++ b/src/resources/views/partials/headerHome.hbs
@@ -48,8 +48,9 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
                 </form>&nbsp;
             </div>
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-end cartItem">
                 <a href="" class="nav-link nav-item"><i class="fas fa-shopping-cart iconCart"></i></a>
+                <span class="rounded-circle cartQuantity">200</span>
             </div>
         </div><br>
     </div>
