--- a/src/resources/views/partials/headerStaff.hbs
+++ b/src/resources/views/partials/headerStaff.hbs
@@ -45,7 +45,7 @@
             <div class="d-flex rightItem navbar-nav">
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Phong
+                    <i class="fas fa-user-circle"></i> {{staff.user}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Đổi mật khẩu</a>
