--- a/src/resources/views/partials/headerCustomer.hbs
+++ b/src/resources/views/partials/headerCustomer.hbs
@@ -65,8 +65,9 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
                 </form>&nbsp;
             </div>
-            <div class="d-flex justify-content-end">
-                <a href="" class="nav-link nav-item"><i class="fas fa-shopping-cart iconCart"></i></a>
+            <div class="d-flex justify-content-end cartItem mr-3">
+                <a href="/cart" class="nav-link nav-item"><i class="fas fa-shopping-cart iconCart"></i></a>
+                <span class="cartQuantity" id="cartQuantity"></span>
             </div>
         </div><br>
     </div>
