--- a/src/resources/views/homeCustomer.hbs
+++ b/src/resources/views/homeCustomer.hbs
@@ -1,17 +1,24 @@
 
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">{{cus.user}}</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
 
-<div class="">
-  {{cus.user}}
+<div class="mt-3 mb-3">
+    <div class="row">
+        {{#each products}}
+            <a href="/{{this.slug}}" class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 linkItemProduct">
+                <div class="itemProduct">
+                    <img class="w-100 imageProduct" src="{{this.image}}" alt="Lỗi không thể tải ảnh">
+                    <div class="textProduct">
+                        <h5 class="nameProduct">{{this.name}}</h5>
+                        <div class="d-flex justify-content-between">
+                            <span class="number">{{this.cost}}</span>
+                            <span>Đã bán: 100</span>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        {{/each}}
+    </div>
 </div>
 
 <script>
- 
+    
 </script>
