fix bug login with facebook

--- a/src/resources/views/detailProductStaff.hbs
+++ b/src/resources/views/detailProductStaff.hbs
@@ -10,7 +10,7 @@
             <div class="nameDetailProduct">{{product.name}}</div>
             <div class="">{{product.description}}</div>
             <div class="">Số lượng: {{product.quantity}}</div>
-            <div class="">Đã bán: 20</div>
+            <div class="">Đã bán: {{product.sold}}</div>
             <div class=""><span>Giá sản phẩm: </span><span class="number">{{product.cost}}</span></div>
         </div>
     </div>
