--- a/src/resources/views/detailProductAdmin.hbs
+++ b/src/resources/views/detailProductAdmin.hbs
@@ -10,7 +10,7 @@
             <div class="nameDetailProduct">{{product.name}}</div>
             <div class="">{{product.description}}</div>
             <div class="">Số lượng: {{product.quantity}}</div>
-            <div class="">Đã bán: 20</div>
+            <div class="">Đã bán: {{product.sold}}</div>
             <table class="buyProduct w-100">
                 <tr>
                     <td>
