--- a/src/resources/views/partials/headerCustomer.hbs
+++ b/src/resources/views/partials/headerCustomer.hbs
@@ -49,10 +49,11 @@
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle avatarResponsive" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-user-circle"></i> {{cus.user}}
+                        <img class="rounded-circle" src="{{cus.image}}" alt="" style="width: 30px;"> {{cus.user}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/customer/changePassword">Đổi mật khẩu</a>
+                        <a class="dropdown-item" href="/customer/changeAvatar">Đổi ảnh đại diện</a>
                         <a class="dropdown-item" href="/customer/profile">Cập nhật thông tin</a>
                         <a class="dropdown-item" href="/customer/logOut">Đăng xuất</a>
                     </div>
