--- a/src/resources/views/searchCustomer.hbs
+++ b/src/resources/views/searchCustomer.hbs
@@ -10,7 +10,7 @@
                     <h5 class="nameProduct">{{this.name}}</h5>
                     <div class="d-flex justify-content-between">
                         <span class="number">{{this.cost}}</span>
-                        <span>Đã bán: 100</span>
+                        <span>Đã bán: {{this.sold}}</span>
                     </div>
                 </div>
             </div>
