--- a/src/resources/views/historyOrderCus.hbs
+++ b/src/resources/views/historyOrderCus.hbs
@@ -73,7 +73,7 @@
 </div>
 {{else}}
 <div class="mt-3 mb-3">
-    <h3 style="text-align: center; color:rgb(194, 174, 230);">Bạn chưa có đơn hàng nào được xác nhận!</h3>
+    <h3 style="text-align: center; color:rgb(194, 174, 230);">Bạn chưa đặt dơn hàng nào!</h3>
     <div class="" style="text-align: center;"><a href="/customer/awaitingConfirm" style="text-decoration: none;">Tìm
             hiểu nguyên nhân</a></div>
 </div>
