--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -172,7 +172,7 @@
                             //
                             var rePassCheck = document.getElementById('rePassword').value;
                             if(rePassCheck == "") {
-                                document.getElementById("warningRePassWord").innerHTML="Vui lòng lại mật khẩu!";
+                                document.getElementById("warningRePassWord").innerHTML="Vui lòng nhập lại mật khẩu!";
                                 checked = false;
                             }
                             else  if(rePassCheck == passCheck) document.getElementById("warningRePassWord").innerHTML="";
